Nebula Logger/main/default/objects/LoggerSObjectHandlerPluginParameter__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if the plugin parameter is enabled/disabled. Only enabled plugin parameters will be used by the Apex plugin framework.</description>
    <inlineHelpText>Controls if the plugin parameter is enabled/disabled. Only enabled plugin parameters will be used by the Apex plugin framework.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>