Nebula Logger/main/default/objects/LoggerSObjectHandlerPluginParameter__mdt/fields/SObjectHandlerPlugin__c.field-meta.xml
<CustomField>
    <fullName>SObjectHandlerPlugin__c</fullName>
    <description>The configured plugin that uses this parameter</description>
    <inlineHelpText>The configured plugin that uses this parameter</inlineHelpText>
    <label>Logger Plugin</label>
    <referenceTo>LoggerSObjectHandlerPlugin__mdt</referenceTo>
    <relationshipLabel>Logger Plugin Parameters</relationshipLabel>
    <relationshipName>LoggerSObjectHandlerPluginParameters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>