Nebula Logger/main/default/objects/LoggerSObjectHandlerPluginParameter__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value used by the plugin for this parameter. Since custom metadata type (CMDT) records can be deployed between orgs, you can either:
 - Deploy the CMDT records between your orgs - for parameters that should be consistent in all environments
 - Manually configure the CMDT records in each org - for parameters that should be environment-specific</description>
    <inlineHelpText>The value used by the plugin for this parameter. Since custom metadata type (CMDT) records can be deployed between orgs, you can either:
 - Deploy the CMDT records between your orgs - for parameters that should be consistent in all environments
 - Manually configure the CMDT records in each org - for parameters that should be environment-specific</inlineHelpText>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>